--- a/CHANGELOG
+++ b/CHANGELOG
@@ -1,3 +1,7 @@
+== 2.1.0 / 2012-08-14
+
+* Neo4j-HA - acquire_write_lock before finding the rule_node, closes #4
+
 == 2.0.1 / 2012-06-07
 
 * Remove annoying "Unknown outgoing relationship" logs #3
