--- a/CHANGELOG
+++ b/CHANGELOG
@@ -1,3 +1,7 @@
+== 2.2.0.rc1 / 2012-09-21
+
+* Using the neo4j-cypher gem
+
 == 2.1.0 / 2012-08-14
 
 * Neo4j-HA - acquire_write_lock before finding the rule_node, closes #4
