--- a/CHANGELOG
+++ b/CHANGELOG
@@ -1,3 +1,7 @@
+== 2.2.0 / 2012-10-02
+
+* Bumped versions of neo4j-core and neo4j-cypher (1.0.0)
+
 == 2.2.0.rc1 / 2012-09-21
 
 * Using the neo4j-cypher gem
