--- a/CHANGELOG
+++ b/CHANGELOG
@@ -1,3 +1,7 @@
+== 2.2.1 / 2012-12-17
+* Fix for JRuby 1.7.1, moved Equal mixin from neo4j-core to neo4j-wrapper, #6
+* Bumped version of neo4j-core to 2.2.1
+
 == 2.2.0 / 2012-10-02
 
 * Bumped versions of neo4j-core and neo4j-cypher (1.0.0)
